fix wrong overflow css

--- a/nushello-www-new/src/styles/light-bootstrap-dashboard.scss
+++ b/nushello-www-new/src/styles/light-bootstrap-dashboard.scss
@@ -433,7 +433,7 @@ body > .navbar-collapse[data-color="purple"]:after {
 
 .sidebar,
 .main-panel {
-  overflow: hidden;
+  overflow-x: hidden;
   max-height: 100%;
   height: 100%;
   -webkit-transition-property: top,bottom;
